Fixed #18101: Make copy to clipboard alignment more consistent

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -1175,11 +1175,6 @@ input[type="radio"]:checked::before {
   display: table-row !important;
 }
 
-.form-control-static {
-  padding-top: 0px;
-}
-
-
 td.text-right.text-padding-number-cell {
   padding-right: 30px !important;
   white-space: nowrap;
@@ -1365,4 +1360,8 @@ Radio toggle styles for permission settings and check/uncheck all
 
 .remember-toggle {
   cursor: pointer;
+}
+
+.js-copy-link {
+  color: grey;
 }
